# Live-Research-Copilot

./: .gitignore  Dockerfile.airflow  Makefile  docker-compose-dist.yaml  docker-compose.yml  example.env  pyproject.toml  readme.md  requirements_airflow.txt
.github/actions/lint/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: ci.yaml  lint.yaml
airflow_app/dags/datasource/: category_ingestion_dag.py  download_papers_dag.py  paper_metadata_ingestion_dag.py  subjects_ingestion_dag.py
airflow_app/dags/datasource/schema/: __init__.py  domain_ingestion_state.py  downloadable_paper.py  ingestion_subject.py
airflow_app/dags/datasource/tasks/: category_ingestion_task.py  domain_ingestion_state_task.py  paper_download_task.py  paper_metadata_ingestion_task.py  subjects_ingestion_task.py
common/constants/: __init__.py  datasource.py  path.py  size.py  states.py  storage.py
common/database/postgres/: alembic.ini  session.py
common/database/postgres/alembic/: env.py
common/database/postgres/constants/: __init__.py  states.py
common/database/postgres/models/: __init__.py  author.py  base.py  datasource.py  domain.py  paper.py  paper_ingestion_state.py  paper_processing_state.py  source.py  subject.py
common/datasources/: __init__.py  base.py  paper_metadata_ingestion_factory.py  schema.py  schema_registry.py
common/datasources/arxiv/: __init__.py  categories.py  category_fetcher.py  const.py  paper_downloader.py  paper_metadata_fetcher.py  paper_metadata_ingestion.py  paper_metadata_parser.py  paper_normalizer.py  paper_parser.py  subjects_fetcher.py
common/datasources/factories/: __init__.py  category_fetcher_factory.py  paper_downloader_factory.py  paper_metadata_ingestion_factory.py  subjects_fetcher_factory.py
common/datasources/registry/: category_fetcher_registry.py  schema_registry.py  subjects_fetcher_registry.py
common/metrics/stats_d/: __init__.py
common/services/: category_ingestion.py
common/services/ingestion/: __init__.py  category_ingestion_service.py  paper_metadata_ingestion_service.py  subjects_ingestion_service.py
common/storage/: s3_client.py  s3_location.py  storage_configs.py
common/utils/: env.py  s3.py
common/utils/logger/: __init__.py  constants.py  logger_config.py
docker_containers/: docker-compose.yml  requirements_airflow.txt
docker_containers/observability/: alloy.hcl  docker-compose.yml  loki-config.yaml  mapping.yaml  otel-collector-config.yaml  prometheus.yml
observability/: docker-compose.yml  mapping.yaml  prometheus.yml
tests/: conftest.py
tests/common/: conftest.py
tests/common/datasources/: conftest.py  test_base.py  test_schema_registry.py
tests/common/services/: test_category_ingestion.py
tests/common/utils/: test_env.py
tests/helpers/: load_data.py
tests/mocks/: __init__.py  arxiv_routes.py
(+62 files in other folders)
